Refactor JWT handling in JwtUtil and enhance security architecture
- Updated JwtUtil to utilize JWKSourceBuilder for improved key source configuration, including caching and timeout settings.
- Introduced DefaultResourceRetriever for better resource management during key retrieval.
- Added detailed documentation outlining the security architecture and component roles, emphasizing the two-contour security model and zero trust principles.

These changes enhance the JWT processing capabilities and provide comprehensive documentation for the security framework.